feat(ever-admin): added payments settings tab in Create Merchant EV-1231

--- a/admin/website-angular/src/app/@shared/payment-gateways/payPal-gateway/payPal-gateway.component.html
+++ b/admin/website-angular/src/app/@shared/payment-gateways/payPal-gateway/payPal-gateway.component.html
@@ -27,10 +27,7 @@
 						| translate
 				}}</option>
 				<option *ngFor="let type of payPalTypes" value="{{ type }}">
-					{{
-						'FAKE_DATA.SETUP_MERCHANTS.PAYMENTS.PAYPAL.TYPE'
-							| translate
-					}}
+					{{ type }}
 				</option>
 			</select>
 		</div>
