--- a/admin/website-angular/src/app/@shared/warehouse/forms/payments-settings/payments-settings-form.component.html
+++ b/admin/website-angular/src/app/@shared/warehouse/forms/payments-settings/payments-settings-form.component.html
@@ -1,23 +1,21 @@
-<nb-card>
-	<nb-card-body>
-		<div class="row m-0">
-			<div class="form-group offset-md-2 col-md-8">
-				<nb-checkbox [(ngModel)]="isPaymentEnabled">
-					{{
-						'FAKE_DATA.SETUP_MERCHANTS.PAYMENTS.PAYMENTS'
-							| translate
-					}}
-				</nb-checkbox>
-			</div>
+<div class="col-sm-12">
+	<div class="row m-0">
+		<div class="form-group offset-md-2 col-md-8">
+			<nb-checkbox [(ngModel)]="isPaymentEnabled">
+				{{
+					'FAKE_DATA.SETUP_MERCHANTS.PAYMENTS.ALLOW_ONLINE_PAYMENT'
+						| translate
+				}}
+			</nb-checkbox>
 		</div>
-		<div [hidden]="!isPaymentEnabled" class="row m-0">
-			<div class="form-group offset-md-2 col-md-8">
-				<ea-payment-gateways
-					#paymentGateways
-					[warehouseLogo]="warehouseLogo"
-					[warehouseCountry]="warehouseCountry"
-				></ea-payment-gateways>
-			</div>
+	</div>
+	<div [hidden]="!isPaymentEnabled" class="row m-0">
+		<div class="form-group offset-md-2 col-md-8">
+			<ea-payment-gateways
+				#paymentGateways
+				[warehouseLogo]="warehouseLogo"
+				[warehouseCountry]="warehouseCountry"
+			></ea-payment-gateways>
 		</div>
-	</nb-card-body>
-</nb-card>
+	</div>
+</div>
