--- a/admin/website-angular/src/app/@shared/warehouse/forms/payments-settings/payments-settings-form.component.html
+++ b/admin/website-angular/src/app/@shared/warehouse/forms/payments-settings/payments-settings-form.component.html
@@ -13,6 +13,7 @@
 		<div class="form-group offset-md-2 col-md-8">
 			<ea-payment-gateways
 				#paymentGateways
+				[isEdit]="isEdit"
 				[warehouseLogo]="warehouseLogo"
 				[warehouseCountry]="warehouseCountry"
 			></ea-payment-gateways>
