feat(ever-merchant): improved the payments settings component EV-1231

--- a/merchant/tablet-ionic/src/components/settings-page-components/settings/payments/payments.html
+++ b/merchant/tablet-ionic/src/components/settings-page-components/settings/payments/payments.html
@@ -12,17 +12,19 @@
 			</ion-checkbox>
 		</ion-item>
 	</ion-col>
+</ion-row>
+<ion-row class="mt-3">
 	<ion-col
 		*ngIf="currWarehouse.isPaymentEnabled && showPaymentsGateways"
-		class="col-3"
+		class="col-6"
 	>
 		<ng-select
-			[items]="myPaymentsGateways"
+			[items]="paymentsGateways"
 			[clearable]="false"
 			[searchable]="false"
-			placeholder="My payments gateways"
+			placeholder="Available Payment Gateways"
 			(change)="showMutation($event)"
-			[(ngModel)]="selectedMyPaymentsGateways"
+			[(ngModel)]="selectedPaymentsGateways"
 			class="payments-gateways-select"
 		>
 			<ng-template ng-label-tmp let-item="item">
@@ -52,40 +54,23 @@
 	</ion-col>
 	<ion-col
 		*ngIf="currWarehouse.isPaymentEnabled && showPaymentsGateways"
-		class="col-3"
+		class="selected-payment-gateways col-6"
 	>
-		<ng-select
-			[items]="paymentsGateways"
-			[clearable]="false"
-			[searchable]="false"
-			placeholder="Payments gateways"
-			class="payments-gateways-select"
-			(change)="showMutation($event)"
-			[(ngModel)]="selectedPaymentsGateways"
-		>
-			<ng-template ng-label-tmp let-item="item">
-				<img
-					*ngIf="getPaymentLogo(item)"
-					height="15"
-					width="15"
-					class="mr-2"
-					[src]="getPaymentLogo(item)"
-				/>
-				{{ getPaymentName(item) }}
-			</ng-template>
-
-			<ng-template ng-option-tmp let-item="item" let-index="index">
-				<p class="card-title">
-					<img
-						*ngIf="getPaymentLogo(item)"
-						height="35"
-						width="35"
-						class="mr-1"
-						[src]="getPaymentLogo(item)"
-					/>
-					{{ getPaymentName(item) }}
-				</p>
-			</ng-template>
-		</ng-select>
+		<ion-label>
+			<div class="mt-2">
+				Selected Payment Gateways
+			</div>
+		</ion-label>
+		<ion-list class="pt-2">
+			<ion-item
+				*ngFor="let pg of myPaymentsGateways"
+				(click)="showMutation(pg)"
+			>
+				<ion-avatar slot="start">
+					<img src="{{ getPaymentLogo(pg) }}" />
+				</ion-avatar>
+				<ion-label>{{ getPaymentName(pg) }}</ion-label>
+			</ion-item>
+		</ion-list>
 	</ion-col>
 </ion-row>
