feat(ever-merchant): remove payment gateway

--- a/merchant/tablet-ionic/src/components/confirm-delete-popup/confirm-delete-popup.html
+++ b/merchant/tablet-ionic/src/components/confirm-delete-popup/confirm-delete-popup.html
@@ -1,6 +1,9 @@
 <!-- TODO add translate -->
 <div class="confirm-delete">
-	<h4>Are you sure you want to delete the following data?</h4>
+	<h4>
+		Are you sure you want to {{ isRemove ? 'remvoe' : 'delete' }} the
+		following data?
+	</h4>
 	<div class="details">
 		<img src="{{ data?.image }}" />
 		<div class="text">
