feat(ever-merchant): initialized stripe config form

--- a/merchant/tablet-ionic/src/components/file-uploader/file-uploader.component.html
+++ b/merchant/tablet-ionic/src/components/file-uploader/file-uploader.component.html
@@ -12,9 +12,11 @@
 
 		<ion-item mode="{{ itemMode }}" class="upload-input col-10 pr-0 pl-0">
 			<ion-input
+				#shownInput="ngModel"
 				class="{{ inputCustomStyle ? 'ion-input-custom-style' : '' }}"
 				ng2FileDrop
 				[uploader]="uploader"
+				(change)="imageUrlChanged()"
 				(onFileDrop)="imageUrlChanged()"
 				[placeholder]="isBrowser ? dragAndDrob : pictureURL"
 				type="text"
