fix(ever-merchant): small fixing

--- a/merchant/tablet-ionic/src/components/settings-page-components/settings/payments/stripe/stripe.html
+++ b/merchant/tablet-ionic/src/components/settings-page-components/settings/payments/stripe/stripe.html
@@ -102,7 +102,7 @@
 					<span *ngIf="companyBrandLogo.value === ''"
 						>Company brand logo is required</span
 					>
-					<span *ngIf="invalidUrl && companyBrandLogo !== ''"
+					<span *ngIf="invalidUrl && companyBrandLogo.value !== ''"
 						>Invalid logo url</span
 					>
 				</div>
