--- a/merchant/tablet-ionic/src/components/settings-page-components/settings/settings.scss
+++ b/merchant/tablet-ionic/src/components/settings-page-components/settings/settings.scss
@@ -26,6 +26,11 @@
 		display: flex;
 		align-content: center;
 		align-items: center;
+		height: auto;
+
+		img {
+			height: 5rem;
+		}
 	}
 
 	.row-title {
