--- a/merchant/tablet-ionic/src/global.scss
+++ b/merchant/tablet-ionic/src/global.scss
@@ -56,7 +56,7 @@ ion-item.payments-gateways-select-container {
 
 .payments-gateways-select {
 	color: #000;
-	width: 100%;
+	width: auto;
 	border-bottom: 1px solid #cacaca;
 	margin-left: 16px;
 	.ng-value-container {
