feat(ever-merchant): update Stripe config object

--- a/merchant/tablet-ionic/src/components/settings-page-components/settings/payments/mutation/mutation.html
+++ b/merchant/tablet-ionic/src/components/settings-page-components/settings/payments/mutation/mutation.html
@@ -10,6 +10,7 @@
 		<e-cu-stripe-gateway
 			*ngIf="paymentGateway === paymentGateways.Stripe"
 			[currenciesCodes]="currenciesCodes"
+			[data]="configureObject"
 			[defaultCompanyBrandLogo]="defaultCompanyBrandLogo"
 			[defaultCurrency]="defaultCurrency"
 			(configureObject)="updateConfigureObject($event)"
