feat(ever-merchant): validated save payment gateways

--- a/merchant/tablet-ionic/src/components/settings-page-components/settings/payments/stripe/stripe.html
+++ b/merchant/tablet-ionic/src/components/settings-page-components/settings/payments/stripe/stripe.html
@@ -115,8 +115,8 @@
 									src="{{ companyBrandLogo?.value }}"
 									alt="Invalid image"
 									class="img-rounded"
-									(error)="invalidUrl = true"
-									(load)="invalidUrl = false"
+									(error)="onUrlChanges(true)"
+									(load)="onUrlChanges(false)"
 								/>
 							</div>
 
