--- a/merchant/tablet-ionic/src/components/settings-page-components/settings/settings.html
+++ b/merchant/tablet-ionic/src/components/settings-page-components/settings/settings.html
@@ -114,7 +114,7 @@
 				<ion-button
 					[disabled]="
 						hasChanges(
-							paymentsSettings.hasChanged,
+							paymentsSettings.isValid,
 							productsDelivery.dirty,
 							productsTakeaway.dirty,
 							orderBarcodeType.dirty,
