--- a/merchant/tablet-ionic/src/components/settings-page-components/settings/payments/mutation/mutation.html
+++ b/merchant/tablet-ionic/src/components/settings-page-components/settings/payments/mutation/mutation.html
@@ -14,6 +14,7 @@
 			[defaultCompanyBrandLogo]="defaultCompanyBrandLogo"
 			[defaultCurrency]="defaultCurrency"
 			(configureObject)="updateConfigureObject($event)"
+			[(isValid)]="isValid"
 		></e-cu-stripe-gateway>
 	</div>
 
@@ -23,6 +24,7 @@
 		</button>
 
 		<button
+			[disabled]="!isValid"
 			(click)="cancelModal(newConfigureObject)"
 			class="button button-brand"
 		>
