--- a/merchant/tablet-ionic/src/components/settings-page-components/settings/payments/stripe/stripe.html
+++ b/merchant/tablet-ionic/src/components/settings-page-components/settings/payments/stripe/stripe.html
@@ -1,5 +1,5 @@
 <!-- TODO add translate -->
-<form class="stripe-gateway" [formGroup]="form">
+<form class="payments-mutation-popup-form stripe-gateway" [formGroup]="form">
 	<ion-grid>
 		<ion-row>
 			<ion-col text-center>
