fix: fixed set language shop-mobile-app

--- a/shop/mobile-ionic/src/app/pages/+language/language.page.html
+++ b/shop/mobile-ionic/src/app/pages/+language/language.page.html
@@ -21,38 +21,23 @@
 		<ion-radio-group [(ngModel)]="language">
 			<ion-item>
 				<ion-label>{{ 'ENGLISH' | translate }}</ion-label>
-				<ion-radio
-					value="en-US"
-					(ionSelect)="switchLanguage('en-US')"
-				></ion-radio>
+				<ion-radio value="en-US"></ion-radio>
 			</ion-item>
 			<ion-item>
 				<ion-label>{{ 'BULGARIAN' | translate }}</ion-label>
-				<ion-radio
-					value="bg-BG"
-					(ionSelect)="switchLanguage('bg-BG')"
-				></ion-radio>
+				<ion-radio value="bg-BG"></ion-radio>
 			</ion-item>
 			<ion-item>
 				<ion-label>{{ 'HEBREW' | translate }}</ion-label>
-				<ion-radio
-					value="he-IL"
-					(ionSelect)="switchLanguage('he-IL')"
-				></ion-radio>
+				<ion-radio value="he-IL"></ion-radio>
 			</ion-item>
 			<ion-item>
 				<ion-label>{{ 'RUSSIAN' | translate }}</ion-label>
-				<ion-radio
-					value="ru-Ru"
-					(ionSelect)="switchLanguage('ru-RU')"
-				></ion-radio>
+				<ion-radio value="ru-RU"></ion-radio>
 			</ion-item>
 			<ion-item>
 				<ion-label>{{ 'SPANISH' | translate }}</ion-label>
-				<ion-radio
-					value="es-ES"
-					(ionSelect)="switchLanguage('es-ES')"
-				></ion-radio>
+				<ion-radio value="es-ES"></ion-radio>
 			</ion-item>
 		</ion-radio-group>
 	</ion-list>
