feat: added Spanish language in create product

--- a/admin/website-angular/src/app/@shared/product/forms/basic-info/basic-info-form.component.html
+++ b/admin/website-angular/src/app/@shared/product/forms/basic-info/basic-info-form.component.html
@@ -186,6 +186,7 @@
 					<option value="he-IL">{{ 'HEBREW' | translate }}</option>
 					<option value="ru-RU">{{ 'RUSSIAN' | translate }}</option>
 					<option value="bg-BG">{{ 'BULGARIAN' | translate }}</option>
+					<option value="es-ES">{{ 'SPANISH' | translate }}</option>
 				</select>
 			</div>
 		</div>
