fix: translate product details shop-mobile #1021

--- a/shop/mobile-ionic/src/app/pages/+products/product-details/product-details.page.html
+++ b/shop/mobile-ionic/src/app/pages/+products/product-details/product-details.page.html
@@ -80,7 +80,7 @@
 						{{ 'PRODUCTS_VIEW.DETAILS.INCLUDES' | translate }}
 					</h6>
 					<span class="description-text">
-						{{ product?.product.details[0]['value'] }}
+						{{ localeTranslate(product?.product.details) }}
 					</span>
 				</div>
 			</ion-row>
