--- a/shop/mobile-ionic/src/app/pages/+products/+order/+order-info/order-info.page.html
+++ b/shop/mobile-ionic/src/app/pages/+products/+order/+order-info/order-info.page.html
@@ -126,11 +126,15 @@
 							<button
 								class="button button-assertive col-100"
 								(click)="closePopup()"
+								[ngSwitch]="order?.isCancelled"
 								dir="{{ 'CURRENT_DIRECTION' | translate }}"
 							>
-								<span
+								<span *ngSwitchCase="false"
 									>{{ 'BUY_POPUP.BUTTONS.END' | translate
 									}}</span
+								>
+								<span *ngSwitchCase="true"
+									>{{ 'OK' | translate }}</span
 								>
 							</button>
 						</span>
