feat: #1036/translate show on map button

--- a/admin/website-angular/src/app/pages/+warehouses/warehouses.component.html
+++ b/admin/website-angular/src/app/pages/+warehouses/warehouses.component.html
@@ -32,7 +32,9 @@
 			routerLink="track"
 		>
 			<i class="ion-md-map button-icon mr-1"></i>
-			<small _ngcontent-c55="">Show on Map</small>
+			<small _ngcontent-c55="">{{
+				'WAREHOUSES_VIEW.SHOW_ON_MAP' | translate
+			}}</small>
 		</button>
 	</nb-card-header>
 
