--- a/admin/website-angular/src/app/pages/+warehouses/+warehouse-track/warehouse-track.component.html
+++ b/admin/website-angular/src/app/pages/+warehouses/+warehouse-track/warehouse-track.component.html
@@ -4,7 +4,10 @@
 			<div class="col-8">
 				<nb-card>
 					<nb-card-header>
-						Track all merchants
+						{{
+							'WAREHOUSES_VIEW.MERCHANTS.TRACK_ALL_MERCHANTS'
+								| translate
+						}}
 					</nb-card-header>
 					<nb-card-body>
 						<div #gmap class="googleMap"></div>
@@ -15,13 +18,19 @@
 			<div class="col-4">
 				<nb-card>
 					<nb-card-header>
-						Filter Merchants
+						{{
+							'WAREHOUSES_VIEW.MERCHANTS.FILTER_MERCHANTS'
+								| translate
+						}}
 					</nb-card-header>
 					<nb-card-body style="overflow:inherit;">
 						<div>
 							<ng-select
 								[items]="listOfMerchants"
-								placeholder="Filter by Name"
+								[placeholder]="
+									'WAREHOUSES_VIEW.MERCHANTS.FILTER_BY_NAME'
+										| translate
+								"
 								[clearable]="true"
 								bindLabel="name"
 								[(ngModel)]="merchantName"
@@ -43,7 +52,10 @@
 								[items]="listOfCities"
 								[(ngModel)]="merchantCity"
 								[clearable]="true"
-								placeholder="Filter by City"
+								[placeholder]="
+									'WAREHOUSES_VIEW.MERCHANTS.FILTER_BY_CITY'
+										| translate
+								"
 								bindLabel="city"
 								style="width:100%; margin-bottom:30px;"
 								(change)="filterByCity($event)"
@@ -68,7 +80,10 @@
 							<ng-select
 								[items]="listOfCountries"
 								[clearable]="true"
-								placeholder="Filter by City"
+								[placeholder]="
+									'WAREHOUSES_VIEW.MERCHANTS.FILTER_BY_COUNTRY'
+										| translate
+								"
 								bindLabel="city"
 								[(ngModel)]="merchantCountry"
 								style="width:100%; margin-bottom:30px;"
