fix: language translation in mobile shop

--- a/shop/mobile-ionic/src/app/pages/+merchants/merchants.page.html
+++ b/shop/mobile-ionic/src/app/pages/+merchants/merchants.page.html
@@ -21,7 +21,7 @@
 				[(ngModel)]="searchName"
 				mode="ios"
 				color="light"
-				placeholder="Merchant name"
+				placeholder="{{'MERCHANTS_VIEW.NAME' | translate}}"
 				animated
 				debounce="1000"
 				(ionChange)="searchChange($event)"
