--- a/admin/website-angular/src/app/pages/+products/+product/product-edit/product-edit.component.html
+++ b/admin/website-angular/src/app/pages/+products/+product/product-edit/product-edit.component.html
@@ -5,7 +5,7 @@
 			<svg
 				viewBox="0 0 24 24"
 				class="control-icon control-icon-left"
-				[routerLink]="['/products/list']"
+				(click)="back()"
 			>
 				<path
 					d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
