--- a/packages/merchant-tablet-ionic/src/@shared/user/mutation/user-mutation.component.html
+++ b/packages/merchant-tablet-ionic/src/@shared/user/mutation/user-mutation.component.html
@@ -5,7 +5,7 @@
 			(user ? 'Edit customer' : 'CUSTOMERS_VIEW.ADD_CUSTOMER') | translate
 		}}
 	</h4>
-	<button class="close" (click)="cancelModal()">
+	<button class="close" *ngIf="visible" (click)="cancelModal()">
 		<i class="fa fa-close"></i>
 	</button>
 	<ion-row class="crete-user">
