fix: edit carrier throws error

--- a/packages/admin-web-angular/src/app/pages/+carriers/+carrier/+carrier-edit/carrier-edit.component.html
+++ b/packages/admin-web-angular/src/app/pages/+carriers/+carrier/+carrier-edit/carrier-edit.component.html
@@ -1,14 +1,14 @@
 <toaster-container></toaster-container>
 
 <div>
-	<nb-card *ngIf="carrier$ | async as carrier">
+	<nb-card *ngIf="currentCarrier">
 		<nb-card-header>
 			<!-- back -->
 			<div class="d-inline-flex">
 				<svg
 					viewBox="0 0 24 24"
 					class="control-icon control-icon-left"
-					[routerLink]="['/carriers/' + carrier.id]"
+					[routerLink]="['/carriers/' + currentCarrier.id]"
 				>
 					<path
 						d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
