fix: added notes placeholder translation

--- a/packages/shop-mobile-ionic/src/app/pages/+invite/+by-location/by-location.page.html
+++ b/packages/shop-mobile-ionic/src/app/pages/+invite/+by-location/by-location.page.html
@@ -69,7 +69,7 @@
 									autofocus
 									rows="3"
 									cols="18"
-									placeholder="Enter notes here..."
+									placeholder="{{ 'ENTER_NOTES_HERE' | translate }}"
 								></ion-textarea>
 							</div>
 						</ion-col>
