--- a/packages/admin-web-angular/src/app/pages/+simulation/order/order.component.html
+++ b/packages/admin-web-angular/src/app/pages/+simulation/order/order.component.html
@@ -88,7 +88,8 @@
 
 		<div class="row">
 			<div class="col-12 no-padding">
-				<slideshow
+				<!-- TODO un-comment when the following is fixed https://github.com/dockleryxk/ng-simple-slideshow/issues/105 -->
+				<!-- <slideshow
 					*ngIf="order.products.length"
 					[height]="'355px'"
 					[autoPlay]="true"
@@ -97,7 +98,7 @@
 					[lazyLoad]="order.products.length"
 					[autoPlayWaitForLazyLoad]="true"
 					>></slideshow
-				>
+				> -->
 			</div>
 		</div>
 	</div>
