--- a/packages/admin-web-angular/src/app/pages/+warehouses/warehouses.component.html
+++ b/packages/admin-web-angular/src/app/pages/+warehouses/warehouses.component.html
@@ -27,7 +27,7 @@
 		</button>
 		<button
 			nbButton
-			status="warning"
+			status="primary"
 			class="mr-2 d-inline-block"
 			routerLink="track"
 		>
