--- a/packages/admin-web-angular/src/app/@theme/styles/everlight.theme.scss
+++ b/packages/admin-web-angular/src/app/@theme/styles/everlight.theme.scss
@@ -1,5 +1,6 @@
 $gray: #888;
 $danger: #ce4843;
+$primary: #3366ff;
 $success: #47d26f;
 $dark: hsl(234, 26, 25);
 $nb-themes: nb-register-theme(
@@ -14,15 +15,15 @@ $nb-themes: nb-register-theme(
 		color-success-800: #47d26f,
 		color-success-900: #47d26f,
 		color-text-color-highlight-500: #47d26f,
-		color-primary-100: #888,
-		color-primary-200: #888,
-		color-primary-300: #888,
-		color-primary-400: #888,
-		color-primary-500: #888,
-		color-primary-600: #888,
-		color-primary-700: #888,
-		color-primary-800: #888,
-		color-primary-900: #888,
+		color-primary-100: #3366ff,
+		color-primary-200: #3366ff,
+		color-primary-300: #3366ff,
+		color-primary-400: #3366ff,
+		color-primary-500: #3366ff,
+		color-primary-600: #3366ff,
+		color-primary-700: #3366ff,
+		color-primary-800: #3366ff,
+		color-primary-900: #3366ff,
 		color-danger-100: #ce4843,
 		color-danger-200: #ce4843,
 		color-danger-300: #ce4843,
