fix: use specific carriers error

--- a/packages/admin-web-angular/src/app/@shared/warehouse/forms/warehouse-manage-tabs/details/warehouse-manage-tabs-details.component.html
+++ b/packages/admin-web-angular/src/app/@shared/warehouse/forms/warehouse-manage-tabs/details/warehouse-manage-tabs-details.component.html
@@ -145,7 +145,7 @@
 
 				<div *ngIf="hasRestrictedCarriers.value">
 					<ss-multiselect-dropdown
-						[options]="carriersOptions$ | async"
+						[options]="carriersOptions"
 						[settings]="{ displayAllSelectedText: true }"
 						formControlName="carriersIds"
 						class="carriers-dropdown"
