--- a/packages/admin-web-angular/src/app/pages/+warehouses/+warehouse/warehouse-order-view/warehouse-order-view.component.html
+++ b/packages/admin-web-angular/src/app/pages/+warehouses/+warehouse/warehouse-order-view/warehouse-order-view.component.html
@@ -183,17 +183,7 @@
 			*ngIf="selectedOrder.products.length"
 			class="col-12 no-padding slider"
 		>
-			<!-- TODO un-comment when the following is fixed https://github.com/dockleryxk/ng-simple-slideshow/issues/105 -->
-			<!-- <slideshow
-				#slideshow
-				[height]="'300px'"
-				[captionBackground]="'rgba(0, 0, 0, .5)'"
-				[autoPlay]="true"
-				[autoPlayInterval]="5000"
-				[imageUrls]="slideImages"
-				[lazyLoad]="selectedOrder.products.length"
-				[autoPlayWaitForLazyLoad]="true"
-			></slideshow> -->
+			<image-slider [slideImages]="slideImages"></image-slider>
 		</div>
 	</nb-card-body>
 </nb-card>
