feat: added notes to merchant, admin and carrier

--- a/packages/admin-web-angular/src/app/pages/+customers/+customer/ea-customer-info/ea-customer-info.component.html
+++ b/packages/admin-web-angular/src/app/pages/+customers/+customer/ea-customer-info/ea-customer-info.component.html
@@ -25,6 +25,7 @@
 							', ' + user.geoLocation.countryName
 					}}
 				</div>
+				<div>Notes: {{ user.geoLocation.notes }}</div>
 			</div>
 		</div>
 
