--- a/packages/carrier-mobile-ionic/src/components/order-card/order/order.component.html
+++ b/packages/carrier-mobile-ionic/src/components/order-card/order/order.component.html
@@ -10,6 +10,7 @@
 			</div>
 
 			<div class="top">{{ customerAddress }}</div>
+			<div class="bottom">{{ customerNotes }}</div>
 			<small>
 				<div *ngIf="order.isCancelled">
 					{{ 'DELIVERY_VIEW.CANCELED' | translate }}
