--- a/packages/merchant-tablet-ionic/src/components/common/customer-info/customer-info.html
+++ b/packages/merchant-tablet-ionic/src/components/common/customer-info/customer-info.html
@@ -14,6 +14,7 @@
 			<user-phone [user]="user"></user-phone>
 			<div>{{ user.email }}</div>
 			<div>{{ fullAddress }}</div>
+			<div>Notes: {{ user.geoLocation.notes }}</div>
 		</div>
 	</div>
 </div>
