feat: added notes on shopweb order

--- a/packages/shop-web-angular/src/app/+orders/order/order.component.html
+++ b/packages/shop-web-angular/src/app/+orders/order/order.component.html
@@ -39,6 +39,10 @@
 					<h2 class="product-description">
 						{{ localeTranslate(product.product.description) }}
 					</h2>
+					<h2 class="customer-notes">
+						Notes:
+						{{ order.user.geoLocation.notes }}
+					</h2>
 				</div>
 			</div>
 			<div class="order-images">
