--- a/packages/shop-web-angular/src/app/+orders/order/order.component.scss
+++ b/packages/shop-web-angular/src/app/+orders/order/order.component.scss
@@ -128,6 +128,14 @@
 	font-size: 18px;
 }
 
+.customer-notes {
+	font-family: 'Roboto', 'Helvetica Neue Light', 'HelveticaNeue-Light',
+		'Helvetica Neue', Calibri, Helvetica, Arial, sans-serif;
+	font-weight: normal;
+	color: rgba(0, 0, 0, 0.8);
+	font-size: 13px;
+}
+
 .warehouse-info {
 	display: flex;
 	flex-direction: column;
